# SpotMicro_ESP32

./: .gitignore  README.md
code/cordova/spotcontroller/: config.xml  package-lock.json  package.json
code/cordova/spotcontroller/www/: index.html
code/cordova/spotcontroller/www/js/: app.js  bluetooth.js  controller.js
code/esp-idf/ik_test/: CMakeLists.txt  sdkconfig.old
code/esp-idf/ik_test/components/spot_micro_kinematics/: CMakeLists.txt
code/esp-idf/ik_test/main/: CMakeLists.txt  config.h  i2cpwm_controller.cpp  i2cpwm_controller.h  main.c  motion_controller.cpp  motion_controller.h  servo.c  spot_ik.c  spot_micro_motion_cmd.cpp  spot_micro_motion_cmd.h
code/esp-idf/pca9685_pwm_test/main/: pca9685Test.c
code/python/: Untitled.ipynb  test.py
code/python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
